tests/ui/pin_mut_alias.stderr
error[E0277]: mutable reference to C++ type requires a pin -- use Pin<&mut arg::Arg>
  --> tests/ui/pin_mut_alias.rs:16:23
   |
12 |     #[cxx::bridge]
   |     -------------- required by a bound introduced by this call
...
16 |             fn f(arg: &mut Arg);
   |                       ^^^^^^^^ use Pin<&mut arg::Arg>
   |
   = help: the trait `cxx::rust_type::ReferenceToUnpin` is not implemented for `&mut arg::Arg`
note: required by a bound in `cxx::rust_type::Without::<T>::check_unpin`
  --> src/rust_type.rs
   |
   |     pub const fn check_unpin<U: ReferenceToUnpin>(&self) {}
   |                                 ^^^^^^^^^^^^^^^^ required by this bound in `Without::<T>::check_unpin`

error[E0277]: mutable reference to C++ type requires a pin -- use Pin<&mut receiver::Receiver>
  --> tests/ui/pin_mut_alias.rs:35:18
   |
32 |       #[cxx::bridge]
   |       -------------- required by a bound introduced by this call
...
35 |               type Receiver = crate::receiver::Receiver;
   |  __________________^
36 | |             fn g(&mut self);
   | |__________________^ use Pin<&mut receiver::Receiver>
   |
   = help: the trait `cxx::rust_type::ReferenceToUnpin` is not implemented for `&mut receiver::Receiver`
note: required by a bound in `cxx::rust_type::Without::<T>::check_unpin`
  --> src/rust_type.rs
   |
   |     pub const fn check_unpin<U: ReferenceToUnpin>(&self) {}
   |                                 ^^^^^^^^^^^^^^^^ required by this bound in `Without::<T>::check_unpin`

error[E0277]: mutable reference to C++ type requires a pin -- use Pin<&mut receiver2::Receiver2>
  --> tests/ui/pin_mut_alias.rs:56:24
   |
52 |     #[cxx::bridge]
   |     -------------- required by a bound introduced by this call
...
56 |             fn h(self: &mut Receiver2);
   |                        ^^^^^^^^^^^^^^ use Pin<&mut receiver2::Receiver2>
   |
   = help: the trait `cxx::rust_type::ReferenceToUnpin` is not implemented for `&mut receiver2::Receiver2`
note: required by a bound in `cxx::rust_type::Without::<T>::check_unpin`
  --> src/rust_type.rs
   |
   |     pub const fn check_unpin<U: ReferenceToUnpin>(&self) {}
   |                                 ^^^^^^^^^^^^^^^^ required by this bound in `Without::<T>::check_unpin`
